--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<div class="lang-selector">
+  <button (click)="setLang('es')">ES</button>
+  <button (click)="setLang('en')">EN</button>
+  <button (click)="setLang('pt')">PT</button>
+</div>
 
-
-<router-outlet />
+<div [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet" />
+</div>
