--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="login-container">
-  <h1>Ingreso al Sistema</h1>
-  
+  <h1>{{ 'login_title' | translate }}</h1>
+ 
   <form (ngSubmit)="manualLogin()">
-    <div class="form-group">
+   <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" [(ngModel)]="email" name="email" required placeholder="ej: admin@clinic.com">
-    </div>
-    <div class="form-group">
-      <label for="password">Contraseña</label>
+      <input type="email" id="email" [(ngModel)]="email" name="email" required placeholder="{{ 'login_placeholder_email' | translate }}">
+     </div>
+   <div class="form-group">
+      <label for="password">{{ 'login_placeholder_pass' | translate }}</label>
       <input type="password" id="password" [(ngModel)]="password" name="password" required placeholder="123">
-    </div>
-    <button type="submit">Ingresar</button>
+     </div>
+    <button type="submit">{{ 'login_submit' | translate }}</button>
   </form>
 
   <p class="mt-3">
-    <a [routerLink]="['/registro']">¿No tienes cuenta? Regístrate aquí</a>
+  <a [routerLink]="['/registro']">¿No tienes cuenta? {{ 'register_btn' | translate }} aquí</a>
   </p>
 </div>
 
@@ -23,9 +23,11 @@
        class="quick-access-button" 
        (click)="quickLogin(user)" 
        title="Login rápido como {{ user.role | titlecase }} ({{ user.email }})">
-    
-    <img [src]="user.pictureUrl" alt="Perfil" class="profile-img">
-    
-    <span class="role-badge" [ngClass]="user.role">{{ user.role.charAt(0).toUpperCase() }}</span>
+
+        <img [src]="user.perfilImageUrl" alt="Perfil" class="profile-img">
+
+        <span class="role-badge" [ngClass]="user.role">
+    {{ user.role | slice:0:1 | uppercase }} 
+</span>
   </div>
 </div>
